# deep-research-agent

./: .gitignore  CLAUDE.md  README.md  StreamingCycle.md  _search_store_retrieve_.py  architecture.md  arxiv_retriever.py  arxiv_retriever_lc.py  combined_papers.txt  data_flow.html  demo.md  demo_architecture.html  gap_questions_report_1420_04.md  gap_questions_report_2902_03.md  gap_questions_report_3512_01.md  gap_questions_report_3903.md  gap_questions_report_7998.md  gap_questions_report_8366.md  gap_questions_report_8801.md  gap_questions_report_9317.md  gap_questions_report_9879.md  gap_questions_state_20250718_200021_.json  gap_questions_vector_content.md  pad_images.py  planner_test_results_grok.json  pyproject.toml  query_solutions.md  render.yaml  report.md  report.txt  requirements.txt  researcher_reviewer_graph.py  rules.md  run_visualizer.py  sub_researcher_graph.py  temp.py  test_tavily.py  test_tavily_adv.py  test_websearch.py  trigger.txt  (+3 more)
.gap_questions_observations/: gap_questions_report_1693_06.md  gap_questions_report_4013_02.md  gap_questions_report_552_05.md  gap_questions_report_6323_07.md
HITL/: human_in_loop.py
architecture_diagrams/: component_hierarchy.html  data_flow.html  main_architecture.html
arxiv_retriever_v1/: arxiv_agent.py  full_text_report.txt  queries.py  report.txt
categorizer/: categories.py  router.py
client/: index.html
deep-research-agent/: README.md  WARP.md  planner_test_results.json  prompt_datetime.py  query_solutions.md  requirements.txt  rules.md  test_websearch.py
documentation/: Memory_Strategy.md  Messages.md  cover_playwright.md  short_term_memory.md  streaming.md  subgraph.md  wort.json
editor/: editor_node.py  editor_service.py  types.py
fake_data/: fakedata.py
gap_generator_logs/: gap_gen_20250617_195944_detailed_log.json  gap_gen_20250617_195944_detailed_report.md  gap_gen_20250617_195944_urls_content.json  gap_gen_20250617_195944_vector_results.json  gap_gen_20250617_195944_visualization.html
gap_questions/: __init__.py  external_search_system.py  generator.py
gap_questions_run_20250718_202343/: gap_questions_report_9703.md  gap_questions_state_20250718_202715.json  raw_research_results.json
(+461 files in other folders)
